# advent-of-code-2023

./: .gitignore  README.md
day-01/fsharp_evelinag/: day01.fsx
day-01/haskell_jon/: aoc.cabal  day1.cabal  day1.hs
day-01/julia_rchan26/: day_one.jl
day-01/python_b-d-e/: brief.md  main.py
day-01/python_cptanalatriste/: part_one.py  part_one_calibration_test.py  part_one_test.py  part_two_calibration.py  part_two_calibration_test.py  part_two_test_calibration.py
day-01/python_fedenanni/: day1.ipynb
day-01/python_jackr/: day01.py
day-01/python_joseph-palmer/: day1.py
day-01/python_radka-j/: day01.py
day-01/r_phil/: day01.R  test2.txt
day-01/racket_triangle-man/: day01.rkt
day-01/rust_sgreenbury/: README.md  copy_from_template.sh
day-02/fsharp_evelinag/: day02.fsx
day-02/haskell_jon/: aoc.cabal  day2.cabal  day2.hs
day-02/julia_rchan26/: day_two.jl
day-02/python_b-d-e/: main.py
day-02/python_cptanalatriste/: part_one_subsets.py  part_one_subsets_test.py  part_one_test.py  part_two.py  part_two_subsets.py  part_two_subsets_test.py  part_two_test.py
day-02/python_fedenanni/: day2.ipynb
day-02/python_jackr/: day02.py
day-02/python_radka-j/: day02.py
day-02/r_phil/: day02.R
day-02/racket_triangle-man/: day02.rkt
day-02/rust_sgreenbury/: README.md
day-02/rust_tomogwen/: Cargo.toml
day-03/fsharp_evelinag/: day03.ipynb
day-03/haskell_jon/: aoc.cabal  day3.cabal  day3.hs
day-03/rust_sgreenbury/: Cargo.toml  README.md
day-05/rust_sgreenbury/: Cargo.toml  README.md
day-05/rust_sgreenbury/src/: lib.rs
day-07/: day07.fsx
(+106 files in other folders)
