[package]
name = "advent_of_code"
version = "0.9.2"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
pico-args = "0.5.0"
anyhow = "1.0"
itertools = "0.12"
lazy_static = "1.4"
regex = "1.10.2"
geo = "0.27.0"
nom = "7.1.3"
hashbrown = "0.14.3"